[EXE-1558] Setup build and deploy; add pushdown (#1)